Fixing the footer spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ body {
 }
 
 footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 50%;
     transform: translate(-50%);
